# Modular-RAG-MCP-Server

./: DEV_SPEC.md  README.md  main.py  pyproject.toml
.claude/skills/auto-coder/: .spec_hash
.claude/skills/auto-coder/references/: 01-overview.md  02-features.md  03-tech-stack.md  04-testing.md  05-architecture.md  06-schedule.md  07-future.md
config/: settings.yaml
config/prompts/: chunk_refinement.txt  image_captioning.txt  rerank.txt
src/core/: settings.py
src/observability/: logger.py
tests/fixtures/sample_documents/: README.txt
