[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "modular-rag-mcp-server"
version = "0.1.0"
description = "A modular RAG (Retrieval-Augmented Generation) system with MCP (Model Context Protocol) server interface"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "pyyaml>=6.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.10",
]
llm = [
    "openai>=1.0",
    "httpx>=0.24",
]
embedding = [
    "openai>=1.0",
]
splitter = [
    "langchain-text-splitters>=0.0.1",
]
vectorstore = [
    "chromadb>=0.4",
]
loader = [
    "pymupdf>=1.23",
]
reranker = [
    "sentence-transformers>=2.2",
]
evaluation = [
    "ragas>=0.1",
]
dashboard = [
    "streamlit>=1.28",
]
all = [
    "modular-rag-mcp-server[dev,llm,embedding,splitter,vectorstore,loader,reranker,evaluation,dashboard]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (may use real backends)",
    "e2e: End-to-end tests (full pipeline)",
    "slow: Slow tests",
]
addopts = "-v --tb=short"
pythonpath = ["."]

[tool.setuptools.package-data]
config = ["*.yaml", "prompts/*.txt"]
